--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,3 +1,22 @@
-<p>
-  hero-detail works!
-</p>
+<div *ngIf="selectedHero">
+
+  <h2>{{hero.firstName + " " + hero.lastName | uppercase}} Details:</h2>
+  <div>
+    <span class="badges">Employee Id: </span>{{hero.id}}
+  </div>
+  
+  <div>
+    <span class="badges">First Name: </span>{{hero.firstName}}
+    <input [(ngModel)]="hero.firstName" placeholder="name">
+  </div>
+
+  <div>
+    <span class="badges">Last Name: </span>{{hero.lastName}}
+    <input [(ngModel)]="hero.lastName" placeholder="Last Name">
+  </div>
+
+  <div>
+    <span class="badges">Salary: </span>{{hero.salary}}
+    <input [(ngModel)]="hero.salary" placeholder="Salary">
+  </div>
+</div>
