--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,34 +1,8 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes" [class.selected] = "hero === selectedHero" (click)="onSelect(hero)">
-      <span class="badge">{{hero.id}}</span> {{hero.firstName + " " + hero.lastName | uppercase}}
-    </li>
-    </ul>
+  <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
+    <span class="badge">{{hero.id}}</span> {{hero.firstName + " " + hero.lastName | uppercase}}
+  </li>
+</ul>
 
-    <!--<h2>{{hero.firstName   + " " + hero.lastName |  uppercase}} Details</h2>
-<div><span class="badges">Employee Id: </span>{{hero.id}}</div>
-<div><span class="badges">First Name: </span>{{hero.firstName}}
-    <input [(ngModel)]="hero.firstName" placeholder="name">
-  </div>
- <div><span class="badges">Last Name: </span>{{hero.lastName}}
-        <input [(ngModel)]="hero.lastName" placeholder="Last Name">
-  </div>
-<div><span class="badges">Salary: </span>{{hero.salary}}
-        <input [(ngModel)]="hero.salary" placeholder="Salary">
-   </div> -->
-
-
-<!--Selected Heros -->
-<div *ngIf="selectedHero">
-<h2>{{selectedHero.firstName + " " + selectedHero.lastName | uppercase}} Details:</h2>
-<div><span class="badges">Employee Id: </span>{{hero.id}}</div>
-<div><span class="badges">First Name: </span>{{hero.firstName}}
-    <input [(ngModel)]="hero.firstName" placeholder="name">
-  </div>
- <div><span class="badges">Last Name: </span>{{hero.lastName}}
-        <input [(ngModel)]="hero.lastName" placeholder="Last Name">
-  </div>
-<div><span class="badges">Salary: </span>{{hero.salary}}
-        <input [(ngModel)]="hero.salary" placeholder="Salary">
-   </div>
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
