--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -6,4 +6,20 @@
   </a>
   </li>
 </ul>
+<div>
+  <label>
+    <input #heroFirstName />
+  </label>
+  <button (click) = "add(heroFirstName.value); heroFirstName.value=''">
+    Add
+  </button>
+</div>
+<ul class="heroes">
+    <li *ngFor="let hero of heroes">
+      <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.firstName | uppercase}}
+    </a>
+    <button class="delete" title="delete hero" (click)="delete(hero)">X</button>
+    </li>
+  </ul>
 
