fully mapped, search, add, delete, update

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,22 +1,23 @@
 <div *ngIf="hero">
 
-  <h2>{{hero.firstName + " " + hero.lastName | uppercase}} Details</h2>
+  <h2>{{hero.firstName + " " + hero.lastName | uppercase}}</h2>
+  <span>Details</span>
   <div>
-    <span class="badges">Employee Id: </span>{{hero.id}}
+    <span>Employee Id: </span>{{hero.id}}
   </div>
   
   <div>
-    <span class="badges">First Name: </span>{{hero.firstName}}
-    <input [(ngModel)]="hero.firstName" placeholder="name">
+    <span class="badges">First Name: </span>{{hero.firstName}} 
+    <input [(ngModel)]="hero.firstName" placeholder="name" />
     <button (click)="save()">Save</button>
   </div>
-
+  
   <div>
     <span class="badges">Last Name: </span>{{hero.lastName}}
     <input [(ngModel)]="hero.lastName" placeholder="Last Name">
     <button (click)="save()">Save</button>
   </div>
-
+  
   <div>
     <span class="badges">Salary: </span>{{hero.salary}}
     <input [(ngModel)]="hero.salary" placeholder="Salary">
