--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -6,6 +6,11 @@ label {
   color: #607D8B;
   font-weight: bold;
 }
+.badges{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+}
 input {
   height: 2em;
   font-size: 1em;
