--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,4 +1,7 @@
 /* DashboardComponent's private CSS styles */
+*{
+  font-family: Arial, Helvetica, sans-serif;
+}
 [class*='col-'] {
   float: left;
   padding-right: 20px;
@@ -14,6 +17,11 @@ a {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+.heading{
+  font-size: 36px;
+  font-weight: bold;
+  padding-bottom: 10px;
 }
 h3 {
   text-align: center; margin-bottom: 0;
@@ -33,16 +41,20 @@ h4 {
   color: #eee;
   max-height: 120px;
   min-width: 120px;
-  background-color: #607d8b;
-  border-radius: 2px;
+  background-color: #636363f6;
+  border-radius: 10px;
 }
 .module:hover {
   background-color: #eee;
   cursor: pointer;
-  color: #607d8b;
+  color: #7d9cabc0;
 }
 .grid-pad {
-  padding: 10px 0;
+ display: flex;
+ padding: 10px;
+ flex-direction: row;
+ flex-wrap: wrap;
+ justify-content: space-between;
 }
 .grid-pad > [class*='col-']:last-of-type {
   padding-right: 20px;
